# To-Do-List

./: .gitignore  Dockerfile  Dockerfile.client  README.md  alembic.ini  docker-compose.yml  pyproject.toml
client/: package-lock.json
client/environments/: environment.development.ts  environment.ts
client/src/app/: app.component.html  app.module.ts
client/src/app/components/todo-form/: todo-list.component.html  todo-list.component.ts
client/src/app/components/todo-list/: todo-form.component.html  todo-form.component.ts
client/src/app/interfaces/: toDoCreate.ts
client/src/app/models/: todo.model.ts
client/src/app/services/: todo.service.ts
exec/: healthcheck.sh  start.sh
exec/start/: api.sh
server/: .env  __init__.py  alembic.ini  debug.py  preprocess.py
server/alembic/: env.py
server/alembic/versions/: c1ad4e601d2a_todo_table.py
server/configuration/: __init__.py  database.py  environment.py
server/controller/: server_controller.py  to_do_controller.py
server/model/: __init__.py  meta.py  to_do_model.py
server/repository/: to_do_repository.py
server/schema/: to_do_schema.py
server/script/: _reset_data.sql
server/service/: to_do_service.py
server/utils/: error.py  exceptions.py  handler.py  logger.py  terminalutils.py  utils.py
